--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1>Hi. I'm <strong>Jane Doe</strong>.</h1>
+								<h1>Hi. I'm <strong>Evan M. Yu</strong>.</h1>
 							</header>
-							<p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
+							<p>I am currently a PhD candidate at Cornell University working with Mert Sabuncu. My research focuses on using tools from machine learning and computer vision to tackle challenging problems found in medical data. </p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
