--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/profile.jpg" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
 								<h1>Hi. I'm <strong>Evan M. Yu</strong>.</h1>
 							</header>
 							<p>I am currently a PhD candidate at Cornell University working with Mert Sabuncu. My research focuses on using tools from machine learning and computer vision to tackle challenging problems found in medical data. </p>
+							<p>Find me on <a href="https://scholar.google.com/citations?user=p6AyWXgAAAAJ&hl=en&authuser=1">Google Scholar</a> and <a href="https://www.linkedin.com/in/evan-yu-84aa4765/">LinkedIn</a>. For a copy of my CV, click <a href="https://drive.google.com/file/d/1SUHUqjqDm756o7rGbBwWvNyO8lVU9fyj/edit">here</a> (last updated Sep 2020).</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -45,35 +46,35 @@
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<h2>Area of Expertise:</h2>
+						<!-- <p>Odio turpis amet sed consequat eget posuere consequat.</p> -->
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<img src="images/generic_ml2.jpg" alt="" width="200" />
+								<h3>Machine Learning</h3>
+								<!-- <p>Proeficient with current Deep Learning techniques</p> -->
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<img src="images/vision2.jpg" alt="" width="200" />
+								<h3>Computer Vision</h3>
+<!-- 								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<img src="images/generic_brain.jpg" alt="" width="200" />
+								<h3>Medical Data</h3>
+<!-- 								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p> -->
 							</section>
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+<!-- 						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p> -->
+						<a href="#portfolio" class="button large scrolly">Here’s some stuff I made recently.</a>
 					</footer>
 				</div>
 			</article>
@@ -81,56 +82,63 @@
 		<!-- Portfolio -->
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
+                <div class="vertical-center">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<h2>Selected Projects and Publications:</h2>
+<!-- 						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p> -->
 					</header>
 					<div class="row">
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-12 col-12-medium col-12-medium">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://openreview.net/forum?id=J1-4vNudWo" class="image featured"><img         src="images/sae.jpg" alt="" /></a>
+								<h3><a href="https://openreview.net/forum?id=J1-4vNudWo">An Auto-Encoder Strategy for Adaptive Image Segmentation</a></h3>
+								<p>Evan M. Yu, Juan Eugenio Iglesias, Adrian V. Dalca, Mert R. Sabuncu.</p>
+                                <p>Spotlight Paper</p>
+
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-12 col-12-medium col-12-medium">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://ieeexplore.ieee.org/abstract/document/8759231" class="image featured"><img src="images/shape.png" alt="" /></a>
+								<h3><a href="https://ieeexplore.ieee.org/abstract/document/8759231">
+A Convolutional Autoencoder Approach to Learn Volumetric Shape Representations for Brain Structures </a></h3>
+								<p>Evan M. Yu, Mert R. Sabuncu</p>
+                                <p>Oral Presentation</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-12 col-12-medium col-12-medium">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#" class="image featured"><img src="images/conditional2.png" alt="" /></a>
+								<h3><a href="#">Learning Conditional Deformable Shape Templates for Brain Anatomy</a></h3>
+								<p>Evan M. Yu, Adrian V. Dalca, Mert R. Sabuncu</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-12 col-12-medium col-12-medium">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://arxiv.org/pdf/1904.11319.pdf" class="Unsupervised Deep Learning for Bayesian Brain MRI Segmentation"><img src="images/unsup.png" alt="" width="1100"/></a>
+								<h3><a href="https://arxiv.org/pdf/1904.11319.pdf"></a>
+Unsupervised Deep Learning for Bayesian Brain MRI Segmentation</h3>
+								<p>Adrian V. Dalca, Evan Yu, Polina Golland, Bruce Fischl, Mert R. Sabuncu, Juan Eugenio Iglesias</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-12 col-12-medium col-12-mediuml">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://www.meenakshikhosla.com/files/graph_mi.pdf" class="image featured"><img src="images/mi2.png" alt="" /></a>
+								<h3><a href="https://www.meenakshikhosla.com/files/graph_mi.pdf">
+A Graph-based Approach to Estimate Mutual Information </a></h3>
+								<p>Meenakshi Khosla, Evan M. Yu </p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+<!-- 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 								<h3><a href="#">Sed amet ornare</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
-						</div>
+						</div> -->
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>Have more questions?</p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
@@ -140,8 +148,8 @@
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 					<header>
-						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+						<h2>Contact me</h2>
+						<p>Use the form below or email me at: emy24@cornell.edu</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
@@ -172,11 +180,7 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
+								<li><a href="#https://www.linkedin.com/in/evan-yu-84aa4765" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
 								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<!--
