--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								<h1>Hi. I'm <strong>Evan M. Yu</strong>.</h1>
 							</header>
 							<p>I am currently a PhD candidate at Cornell University working with Mert Sabuncu. My research focuses on using tools from machine learning and computer vision to tackle challenging problems found in medical data. </p>
-							<p>Find me on <a href="https://scholar.google.com/citations?user=p6AyWXgAAAAJ&hl=en&authuser=1">Google Scholar</a> and <a href="https://www.linkedin.com/in/evan-yu-84aa4765/">LinkedIn</a>. For a copy of my CV, click <a href="https://drive.google.com/file/d/1SUHUqjqDm756o7rGbBwWvNyO8lVU9fyj/edit">here</a> (last updated Sep 2020).</p>
+							<p>Find me on <a href="https://scholar.google.com/citations?user=p6AyWXgAAAAJ&hl=en&authuser=1">Google Scholar</a> and <a href="https://www.linkedin.com/in/evan-yu-84aa4765/">LinkedIn</a>. For a copy of my CV, click <a href="/files/evan_cv2.pdf">here</a> (last updated Sep 2020).</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -124,7 +124,7 @@ Unsupervised Deep Learning for Bayesian Brain MRI Segmentation</h3>
 						<div class="col-12 col-12-medium col-12-mediuml">
 							<article class="box style2">
 								<a href="https://www.meenakshikhosla.com/files/graph_mi.pdf" class="image featured"><img src="images/mi2.png" alt="" /></a>
-								<h3><a href="https://www.meenakshikhosla.com/files/graph_mi.pdf">
+								<h3><a href="/files/graph_mi.pdf">
 A Graph-based Approach to Estimate Mutual Information </a></h3>
 								<p>Meenakshi Khosla, Evan M. Yu </p>
 							</article>
@@ -149,7 +149,7 @@ A Graph-based Approach to Estimate Mutual Information </a></h3>
 				<div class="container medium">
 					<header>
 						<h2>Contact me</h2>
-						<p>Use the form below or email me at: emy24@cornell.edu</p>
+						<p><strong>Use the form below or email me at:</strong> emy24@cornell.edu</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
@@ -178,12 +178,11 @@ A Graph-based Approach to Estimate Mutual Information </a></h3>
 						</div>
 						<div class="col-12">
 							<hr />
-							<h3>Find me on ...</h3>
+<!-- 							<h3>Find me on ...</h3>
 							<ul class="social">
 								<li><a href="#https://www.linkedin.com/in/evan-yu-84aa4765" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
 								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
 								<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
@@ -193,7 +192,7 @@ A Graph-based Approach to Estimate Mutual Information </a></h3>
 								<li><a href="#" class="icon brands fa-blogger"><span>Blogger</span></a></li>
 								<li><a href="#" class="icon brands fa-flickr"><span>Flickr</span></a></li>
 								<li><a href="#" class="icon brands fa-vimeo"><span>Vimeo</span></a></li>
-								-->
+								 -->
 							</ul>
 							<hr />
 						</div>
