--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								<h1>Hi. I'm <strong>Evan M. Yu</strong>.</h1>
 							</header>
 							<p>I am currently a PhD candidate at Cornell University working with Mert Sabuncu. My research focuses on using tools from machine learning and computer vision to tackle challenging problems found in medical data. </p>
-							<p>Find me on <a href="https://scholar.google.com/citations?user=p6AyWXgAAAAJ&hl=en&authuser=1">Google Scholar</a> and <a href="https://www.linkedin.com/in/evan-yu-84aa4765/">LinkedIn</a>. For a copy of my CV, click <a href="/files/evan_cv2.pdf">here</a> (last updated Sep 2020).</p>
+							<p>Find me on <a href="https://scholar.google.com/citations?user=p6AyWXgAAAAJ&hl=en&authuser=1">Google Scholar</a> and <a href="https://www.linkedin.com/in/evan-yu-84aa4765/">LinkedIn</a>. For a copy of my CV, click <a href="files/evan_cv2.pdf">here</a> (last updated Sep 2020).</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -124,7 +124,7 @@ Unsupervised Deep Learning for Bayesian Brain MRI Segmentation</h3>
 						<div class="col-12 col-12-medium col-12-mediuml">
 							<article class="box style2">
 								<a href="https://www.meenakshikhosla.com/files/graph_mi.pdf" class="image featured"><img src="images/mi2.png" alt="" /></a>
-								<h3><a href="/files/graph_mi.pdf">
+								<h3><a href="files/graph_mi.pdf">
 A Graph-based Approach to Estimate Mutual Information </a></h3>
 								<p>Meenakshi Khosla, Evan M. Yu </p>
 							</article>
