--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<li><a href="#top">Top</a></li>
 					<li><a href="#work">Work</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#contact">Contact</a></li>
+<!-- 					<li><a href="#contact">Contact</a></li> -->
 				</ul>
 			</nav>
 
@@ -36,6 +36,7 @@
 							</header>
 							<p>I am currently a PhD candidate at Cornell University working with Mert Sabuncu. My research focuses on using tools from machine learning and computer vision to tackle challenging problems found in medical data. </p>
 							<p>Find me on <a href="https://scholar.google.com/citations?user=p6AyWXgAAAAJ&hl=en&authuser=1">Google Scholar</a> and <a href="https://www.linkedin.com/in/evan-yu-84aa4765/">LinkedIn</a>. For a copy of my CV, click <a href="files/evan_cv2.pdf">here</a> (last updated Sep 2020).</p>
+<p>Contact me on: emy24 [at] cornell [dot] edu</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -138,69 +139,8 @@ A Graph-based Approach to Estimate Mutual Information </a></h3>
 						</div> -->
 					</div>
 					<footer>
-						<p>Have more questions?</p>
-						<a href="#contact" class="button large scrolly">Get in touch with me</a>
-					</footer>
-				</div>
-			</article>
-
-		<!-- Contact -->
-			<article id="contact" class="wrapper style4">
-				<div class="container medium">
-					<header>
-						<h2>Contact me</h2>
-						<p><strong>Use the form below or email me at:</strong> emy24@cornell.edu</p>
-					</header>
-					<div class="row">
-						<div class="col-12">
-							<form method="post" action="#">
-								<div class="row">
-									<div class="col-6 col-12-small">
-										<input type="text" name="name" id="name" placeholder="Name" />
-									</div>
-									<div class="col-6 col-12-small">
-										<input type="text" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="col-12">
-										<input type="text" name="subject" id="subject" placeholder="Subject" />
-									</div>
-									<div class="col-12">
-										<textarea name="message" id="message" placeholder="Message"></textarea>
-									</div>
-									<div class="col-12">
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" /></li>
-											<li><input type="reset" value="Clear Form" class="alt" /></li>
-										</ul>
-									</div>
-								</div>
-							</form>
-						</div>
-						<div class="col-12">
-							<hr />
-<!-- 							<h3>Find me on ...</h3>
-							<ul class="social">
-								<li><a href="#https://www.linkedin.com/in/evan-yu-84aa4765" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
-								<li><a href="#" class="icon brands fa-skype"><span>Skype</span></a></li>
-								<li><a href="#" class="icon brands fa-soundcloud"><span>Soundcloud</span></a></li>
-								<li><a href="#" class="icon brands fa-youtube"><span>YouTube</span></a></li>
-								<li><a href="#" class="icon brands fa-blogger"><span>Blogger</span></a></li>
-								<li><a href="#" class="icon brands fa-flickr"><span>Flickr</span></a></li>
-								<li><a href="#" class="icon brands fa-vimeo"><span>Vimeo</span></a></li>
-								 -->
-							</ul>
-							<hr />
-						</div>
-					</div>
-					<footer>
-						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
+<!-- 						<p>Have more questions?</p>
+						<a href="#contact" class="button large scrolly">Get in touch with me</a> -->
 					</footer>
 				</div>
 			</article>
