--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<article id="work" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Area of Expertise:</h2>
+						<h2>Areas of Expertise:</h2>
 						<!-- <p>Odio turpis amet sed consequat eget posuere consequat.</p> -->
 					</header>
 					<div class="row aln-center">
