fix grammar error

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Evan MY webpage</title>
+		<title>Evan webpage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -53,7 +53,7 @@
 </article>
 
 <article class="major">
-    <p>&#8226; <strong>Evan M. Yu</strong>, Mert R. Sabuncu. A Convolutional Autoencoder Approach to Learn Volumetric Shape Representations for Brain Structures. International Symposium on Biomedical Imaging (2018). [<a href="https://arxiv.org/abs/1810.07746">Preprints</a> | <span style='color: #D8B384;'>Oral Presentation</span>].</p>
+    <p>&#8226; <strong>Evan M. Yu</strong>, Mert R. Sabuncu. A Convolutional Autoencoder Approach to Learn Volumetric Shape Representations for Brain Structures. International Symposium on Biomedical Imaging (2018). [<a href="https://arxiv.org/abs/1810.07746">Preprint</a> | <span style='color: #D8B384;'>Oral Presentation</span>].</p>
 </article>
 
 <article class="major">
